updating Nav 'CellGuide' to one word. updating image for explorer section. adding style to fix image spacing issue on mobile.

--- a/frontend/src/views/Landing/index.module.scss
+++ b/frontend/src/views/Landing/index.module.scss
@@ -437,6 +437,7 @@
 
     @media (max-width: 999px) {
       width: 100%;
+      display: flex;
     }
 
     & > div {
